--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.7",
+    "sequelize": "^4.42.0",
     "sqlite": "^3.0.1",
     "tooltip.js": "^1.3.1"
   }
