--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+	"nodemon" : "nodemon ./bin/www"
   },
   "dependencies": {
     "bootstrap": "^4.3.0",
     "chart.js": "^2.7.3",
+    "config": "^3.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "feather-icons": "^4.17.0",
@@ -20,5 +23,8 @@
     "sequelize": "^4.42.0",
     "sqlite": "^3.0.1",
     "tooltip.js": "^1.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
