--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-	"nodemon" : "nodemon ./bin/www"
+    "nodemon": "nodemon ./bin/www"
   },
   "dependencies": {
     "bootstrap": "^4.3.0",
     "chart.js": "^2.7.3",
     "config": "^3.0.1",
     "cookie-parser": "~1.4.3",
+    "datatables.net-autofill-bs4": "^2.3.2",
+    "datatables.net-bs4": "^1.10.19",
+    "datatables.net-colreorder-bs4": "^1.5.1",
+    "datatables.net-fixedcolumns-bs4": "^3.2.6",
+    "datatables.net-fixedheader-bs4": "^3.1.5",
+    "datatables.net-responsive-bs4": "^2.2.3",
+    "datatables.net-rowgroup-bs4": "^1.1.0",
+    "datatables.net-rowreorder-bs4": "^1.2.5",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
@@ -19,10 +27,13 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "popper.js": "^1.14.7",
     "sequelize": "^4.42.0",
+    "simpleCsvToJson": "0.0.2",
     "sqlite": "^3.0.1",
-    "tooltip.js": "^1.3.1"
+    "tooltip.js": "^1.3.1",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
